completed all sections kinda

--- a/html/results.html
+++ b/html/results.html
@@ -256,7 +256,7 @@
                     </a>
                     <a id="karate" class="cards" href="https://youtu.be/hWB0Xehv23A" target="_blank" >
                         <div class="base">
-                            <img src="../images/hiit.png" alt="Error" width="140px" height="70px">
+                            <img src="../images/karate.png" alt="Error" width="140px" height="70px">
                             <h3> Shotokan Karate Follow Along Class </h3>
                             <p class="tags"> Strength </p>
                             <p class="tags"> Cardio </p>
@@ -272,7 +272,7 @@
                     </a>
                     <a id="taekwondo" class="cards" href="https://youtu.be/F1kXuQ3QB-Y" target="_blank" >
                         <div class="base">
-                            <img src="../images/hiit.png" alt="Error" width="140px" height="70px">
+                            <img src="../images/taekwondo.png" alt="Error" width="140px" height="70px">
                             <h3> Taekwondo Follow Along Class  </h3>
                             <p class="tags"> Strength </p>
                             <p class="tags"> Cardio </p> 
@@ -318,6 +318,7 @@
                         </div>
                         <div class="details">  
                             <p> <b>Age range:</b> All ages</p>
+                            <p><b>Time: </b> </p>
                         </div>
                         <div class="description">
                            <p> What I love about this breakfast is that it’s not only healthy and hearty, it’s delicious and quick to make (if you’re organised).   The eggs are fried but kind of poached and steamed at the same time.  So they remain soft and delicate like poached eggs with the flavour of fried eggs.  Adding the chopped chives to the raw whites gives the eggs a great flavour and an interesting look as the chives set in the cooked whites.</p>
@@ -398,15 +399,15 @@
                   </a>
                   <a id="quesadillas" class="cards" href="https://youtu.be/j2z1ABDaaxg" target="_blank" >
                     <div class="base">
-                        <img src="../images/quesadillas.png" alt="Error" width="140px" height="70px">
-                        <h3> Breakfast Quesadillas </h3>
-                        <p class="tags"> Breakfast </p>
+                      <img src="../images/quesadillas.png" alt="Error" width="140px" height="70px">
+                      <h3> Breakfast Quesadillas </h3>
+                      <p class="tags"> Breakfast </p>
                     </div>
                     <div class="details">  
-                        <p> <b>Age range:</b> All ages</p>
+                      <p> <b>Age range:</b> All ages</p>
                     </div>
                     <div class="description">
-                       <p>Breakfast quesadillas are the easiest one-pan breakfast and take just minutes to make. If you enjoyed our Steak Quesadillas, you will love these!</p>
+                      <p>Breakfast quesadillas are the easiest one-pan breakfast and take just minutes to make. If you enjoyed our Steak Quesadillas, you will love these!</p>
                     </div>
                 </a>
                 <a id="lunchbox" class="cards" href="https://www.momables.com/blt-salad-lunch/#tasty-recipes-34819" target="_blank" >
@@ -431,66 +432,147 @@
             <div class="categories">
                 <h2> Movies/TV </h2>
                 <div id="movies" class="wrapper">
-                    <a id="codenames" class="cards" href="https://codenames.game" target="_blank" >
-                        <div class="base">
-                            <img src="../images/codenames.png" alt="Error" width="145px" height="70px">    
-                            <h3> Codenames Online </h3>
-                            <p> A fun guessing game for all ages! </p>
-                        </div>
-                        <div class="details">  
-                            <!-- <h3> Details </h3> -->
-                            <p> <b>Age range:</b> All ages</p>
-                            <p><b>Price: </b> Free</p>
-                        </div>
-                    </a>
-                    <a id="skribblio" class="cards" href="https://skribbl.io" target="_blank" >
-                        <div class="base">
-                            <img src="../images/skrib.jpg" alt="Error" width="135px" height="70px">
-                            <h3> Skribbl.io </h3>
-                            <p> Want to put your artistic side to the test? Skribbl.io is the game for you! </p>
-                        </div>
-                        <div class="details">  
-                            <!-- <h3> Details </h3> -->
-                            <p> <b>Age range:</b> All ages</p>
-                            <p><b>Price: </b> Free</p>
-                        </div>
-                    </a>
-                    <a id="amongus" class="cards" href="https://store.steampowered.com/app/945360/Among_Us/" target="_blank" >
-                        <div class="base">
-                            <img src="../images/amongus.jpg" alt="Error" width="140px" height="70px">
-                            <h3> Among Us </h3>
-                            <p> Be a crewmate or an imposter. Save your team or sabotage. </p>
-                        </div>
-                        <div class="details">  
-                            <!-- <h3> Details </h3> -->
-                            <p> <b>Age range:</b> All ages</p>
-                            <p><b>Price: </b> Free</p>
-                        </div>
-                    </a>
-                    <a id="golf" class="cards" href="https://store.steampowered.com/app/431240/Golf_With_Your_Friends/" target="_blank" >
-                        <div class="base">
-                            <img src="../images/golf.jpg" alt="Error" width="140px" height="70px">
-                            <h3> Golf With Your Friends </h3>
-                            <p> ---golf with your friends description--- </p>
-                        </div>
-                        <div class="details">  
-                            <!-- <h3> Details </h3> -->
-                            <p> <b>Age range:</b> All ages</p>
-                            <p><b>Price: </b> Free</p>
-                        </div>
-                    </a>
-                    <a id="fallguys" class="cards" href="https://store.steampowered.com/app/1097150/Fall_Guys_Ultimate_Knockout/" target="_blank" >
-                        <div class="base">
-                            <img src="../images/fallguys.jpg" alt="Error" width="140px" height="70px">
-                            <h3> Fall Guys </h3>
-                            <p> ---fall guys description--- </p>
-                        </div>
-                        <div class="details">  
-                            <!-- <h3> Details </h3> -->
-                            <p> <b>Age range:</b> All ages</p>
-                            <p><b>Price: </b> Free</p>
-                        </div>
-                    </a>
+                  <a id="modenFamily" class="cards" href="https://www.netflix.com/title/70143858" target="_blank" >
+                    <div class="base">
+                      <img src="../images/modernFamily.png" alt="Error" width="140px" height="70px">
+                      <h3> Moden Family </h3>
+                      <p class="tags"> Comedy </p>
+                      <p class="tags"> Romance </p>
+                    </div>
+                    <div class="details">  
+                      <p> <b>Age range:</b> TV-14</p>
+                    </div>
+                    <div class="description">
+                      <p>Ed O’Neill, Sofia Vergara, Julie Bowen, more <br><br> Three modern-day families from California try to deal with their kids, quirky spouses and jobs in their own unique ways, often falling into hilarious situations.</p>
+                    </div>
+                </a>
+                <a id="inception" class="cards" href="https://www.netflix.com/title/70131314" target="_blank" >
+                  <div class="base">
+                    <img src="../images/inception.png" alt="Error" width="140px" height="70px">
+                    <h3> inception </h3>
+                    <p class="tags"> Action </p>
+                    <p class="tags"> Sci-Fi </p>
+                  </div>
+                  <div class="details">  
+                    <p> <b>Age range:</b> PG-13 </p>
+                  </div>
+                  <div class="description">
+                    <p>Leonardo DiCaprio, Joseph Gordon-Levitt, Elliot Page, more <br><br> Cobb steals information from his targets by entering their dreams. Saito offers to wipe clean Cobb's criminal history as payment for performing an inception on his sick competitor's son.</p>
+                  </div>
+                </a>
+                <a id="howl" class="cards" href="https://www.netflix.com/title/70028883" target="_blank" >
+                    <div class="base">
+                      <img src="../images/howl.png" alt="Error" width="140px" height="70px">
+                      <h3> Howl's Moving Castle </h3>
+                      <p class="tags"> Drama </p>
+                      <p class="tags"> Romance </p>
+                    </div>
+                    <div class="details">  
+                      <p> <b>Age range:</b> All </p>
+                    </div>
+                    <div class="description">
+                      <p>Cheko Baisho, Takuya Kimura, Akihiro Miwa, more <br><br> Sophie has an uneventful life at her late father's hat shop, but all that changes when she befriends wizard Howl, who lives in a magical flying castle. However, the evil Witch of Waste takes issue with their budding relationship and casts a spell on young Sophie, which ages her prematurely. Now Howl must use all his magical talents to battle the jealous hag and return Sophie to her former youth and beauty.</p>
+                    </div>
+                </a>
+                <a id="forrestGump" class="cards" href="https://www.netflix.com/title/60000724" target="_blank" >
+                    <div class="base">
+                      <img src="../images/forrestGump.png" alt="Error" width="140px" height="70px">
+                      <h3> Forrest Gump </h3>
+                      <p class="tags"> Drama </p>
+                      <p class="tags"> Comedy </p>
+                      <p class="tags"> Romance </p>
+                    </div>
+                    <div class="details">  
+                      <p> <b>Age range:</b> All </p>
+                    </div>
+                    <div class="description">
+                      <p> Tom Hanks, Robin Wright, Gary Sinise, more <br><br> Forrest Gump, a friendly, simpleminded man, finds himself in the middle of nearly every major event of the 1960s and’70s.</p>
+                    </div>
+                </a>
+                <a id="jumanji" class="cards" href="https://www.netflix.com/title/80192646" target="_blank" >
+                  <div class="base">
+                    <img src="../images/jumanji.png" alt="Error" width="140px" height="70px">
+                    <h3> Jumanji </h3>
+                    <p class="tags"> Action </p>
+                    <p class="tags"> Comedy </p>
+                  </div>
+                  <div class="details">  
+                    <p> <b>Age range:</b> PG-13 </p>
+                  </div>
+                  <div class="description">
+                    <p>Four high school students get sucked into the jungle setting of a video game, where they embark on a quest as their comically mismatched adult avatars.</p>
+                  </div>
+                </a>
+                <a id="megamind" class="cards" href="https://www.netflix.com/title/70120612" target="_blank" >
+                    <div class="base">
+                      <img src="../images/megamind.png" alt="Error" width="140px" height="70px">
+                      <h3> Megamind </h3>
+                      <p class="tags"> Comedy </p>
+                      <p class="tags"> Sci-Fi </p>
+                    </div>
+                    <div class="details">  
+                      <p> <b>Age range:</b> All </p>
+                    </div>
+                    <div class="description">
+                      <p>Tom McGrath, Will Ferrell, Brad Bitt, Tina Fey <br><br>A supervillain named Megamind defeats and kills his enemy. Out of boredom he creates a superhero who becomes evil, forcing Megamind to turn into a hero.</p>
+                    </div>
+                </a>
+                <a id="americanMurder" class="cards" href="https://www.netflix.com/title/81130130" target="_blank" >
+                    <div class="base">
+                      <img src="../images/americanMurder.png" alt="Error" width="140px" height="70px">
+                      <h3> American Murder: The Family Next Door </h3>
+                      <p class="tags"> Documentary </p>
+                      <p class="tags"> Thriller </p>
+                    </div>
+                    <div class="details">  
+                      <p> <b>Age range:</b> All </p>
+                    </div>
+                    <div class="description">
+                      <p>American Murder: The Family Next Door is an American true crime documentary film directed by Jenny Popplewell. The film tells the story of the 2018 Watts family murders, which took place in Frederick, Colorado.</p>
+                    </div>
+                </a>
+                <a id="orphan" class="cards" href="https://www.primevideo.com/detail/0U46UOO07B253BPWMGUTBKMQEM/ref=atv_dp_share_cu_r" target="_blank" >
+                  <div class="base">
+                    <img src="../images/orphan.png" alt="Error" width="140px" height="70px">
+                    <h3> Orphan </h3>
+                    <p class="tags"> Horror </p>
+                    <p class="tags"> Thriller </p>
+                  </div>
+                  <div class="details">  
+                    <p> <b>Age range:</b> 18+ </p>
+                  </div>
+                  <div class="description">
+                    <p> Isabelle Fuhrman, Peter Sarsgaard, Vera Farmiga, more <br><br> A couple, who recently lost their baby, adopts a nine-year-old girl. They soon find out that she has a troubled and mysterious past and she is not at all who she pretends to be.</p>
+                  </div>
+                </a>
+                <a id="monsterHouse" class="cards" href="https://www.netflix.com/title/70044595" target="_blank" >
+                    <div class="base">
+                      <img src="../images/monsterHouse.png" alt="Error" width="140px" height="70px">
+                      <h3> Monster House </h3>
+                      <p class="tags"> Horror </p>
+                      <p class="tags"> Comedy </p>
+                    </div>
+                    <div class="details">  
+                      <p> <b>Age range:</b> All </p>
+                    </div>
+                    <div class="description">
+                      <p>Mitchel Musso, Sam Lerner, Spencer Locke, more <br><br> A trio of friends sets out to expose the terrors of a vacant neighborhood house, which appears to have a craving for people - and a life of its own.</p>
+                    </div>
+                </a>
+                <a id="bandOfBrothers" class="cards" href="https://www.youtube.com/watch?v=l4T2PKY1okM&ab_channel=BandofBrothers" target="_blank" >
+                    <div class="base">
+                      <img src="../images/monsterHouse.png" alt="Error" width="140px" height="70px">
+                      <h3> Monster House </h3>
+                      <p class="tags"> Drama </p>
+                      <p class="tags"> Action </p>
+                    </div>
+                    <div class="details">  
+                      <p> <b>Age range:</b> 18+ </p>
+                    </div>
+                    <div class="description">
+                      <p>Damian Lewis, Michael Cudlitz, Michael Fassben, more <br><br> The story of Easy Company, 506th Regiment of the 101st Airborne Division from 1942 to the end of World War II. A collection of fifty portraits illustrated by archive footage and recounted in voice.</p>
+                    </div>
+                </a>
                 </div>
             </div>
 
