shortened howl description

--- a/html/results.html
+++ b/html/results.html
@@ -24,10 +24,10 @@
           <a id="codenames" class="cards" href="https://codenames.game" target="_blank" >
             <div class="base">
               <img src="../images/codenames.png" alt="Error" width="145px" height="70px">    
-                  <h3> Codenames Online </h3>
-                      <p class="tags"> Casual </p>
-                      <p class="tags"> Comedy </p>
-                      <p class="tags"> Strategy </p>
+              <h3> Codenames Online </h3>
+              <p class="tags"> Casual </p>
+              <p class="tags"> Comedy </p>
+              <p class="tags"> Strategy </p>
             </div>
             <div class="details">  
               <p> <b> Players: </b> 4 - 8 </p>
@@ -476,7 +476,7 @@
               <p> <b>Age range:</b> All </p>
             </div>
             <div class="description">
-              <p>Cheko Baisho, Takuya Kimura, Akihiro Miwa, more <br><br> Sophie has an uneventful life at her late father's hat shop, but all that changes when she befriends wizard Howl, who lives in a magical flying castle. However, the evil Witch of Waste takes issue with their budding relationship and casts a spell on young Sophie, which ages her prematurely. Now Howl must use all his magical talents to battle the jealous hag and return Sophie to her former youth and beauty.</p>
+              <p>Cheko Baisho, Takuya Kimura, Akihiro Miwa, more <br><br> Sophie has an uneventful life at her late father's hat shop, but all that changes when she befriends wizard Howl, who lives in a magical flying castle. </p>
             </div>
           </a>
           <a id="forrestGump" class="cards" href="https://www.netflix.com/title/60000724" target="_blank" >
