--- a/html/index.html
+++ b/html/index.html
@@ -20,11 +20,13 @@
     <div class="container">
       <section class="intro-container">
         <div class="intro-header">Welcome to Reconnect!</div>
-        <img
-          src="../images/intro-image.png"
-          alt="intro-img"
-          class="intro-image"
-        />
+        <div class="intro-image-container">
+          <img
+            src="../images/intro-image.png"
+            alt="intro-img"
+            class="intro-image"
+          />
+        </div>
         <div class="intro-descrip">
           <p>
             Times are tough. But as we push forward, we find ways to adapt.
@@ -506,6 +508,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
 
     <script src="../js/index.js"></script>
-    <script src="../js/jquery.js"></script>
   </body>
 </html>
