--- a/html/results.html
+++ b/html/results.html
@@ -1087,6 +1087,6 @@
         </div>
       </div>
     </div>
-    <script src="../js/results.js"></script>
+    <script src="../js/results.js" type="text/javascript"></script> 
   </body>
 </html>
